@@ -47,7 +47,7 @@ class SplitSignatureTest (TestCase):
     # signatures, and therefore all signatures changed by PyObjC, are
     # valid.
         for cls in objc.getClassList():
-            for selName in cls.__dict__.keys():
+            for selName in list(cls.__dict__.keys()):
                 try:
                     sel = getattr(cls, selName.decode('latin1'))
                 except AttributeError:
